--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
           python -m venv venv
           source venv/bin/activate
           pip install -r requirements.txt
+          export SECRET_KEY="${{ secrets.SECRET_KEY }}"
           python manage.py test -v 2
 
   deploy:
