--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ jobs:
   test:
     name: Tester l'application
     runs-on: ubuntu-latest
+    env:
+      DEBUG: "False"
     steps:
       - uses: actions/checkout@v3
       - run: |
