--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DEBUG: "False"
+      ALLOWED_HOSTS: "127.0.0.1,localhost"
     steps:
       - uses: actions/checkout@v3
       - run: |
