--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy to Ubuntu Server
+name: Deploiement API en Production
 
 on:
   push:
@@ -6,25 +6,59 @@ on:
       - main
 
 jobs:
-  deploy:
+  test:
+    name: Tester l'application
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_USER: 'testuser'
+          POSTGRES_PASSWORD: 'testpass'
+          POSTGRES_DB: 'testdb'
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    env:
+      DATABASE_NAME: "testdb"
+      DATABASE_USER: "testuser"
+      DATABASE_PASSWORD: "testpass"
+      DATABASE_HOST: "localhost"
+      DATABASE_PORT: "5432"
+      DEBUG: "True"
+      ALLOWED_HOSTS: "127.0.0.1,localhost"
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Deploy via SSH
-      uses: appleboy/ssh-action@v1.0.3
-      with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USER }}
-        key: ${{ secrets.SERVER_SSH_KEY }}
-        port: 22
-        script: |
-          cd ~/apps/ApiJO_Back
-          git pull origin main
-          source .venv/bin/activate
+      - uses: actions/checkout@v3
+      - run: |
+          python -m venv venv
+          source venv/bin/activate
           pip install -r requirements.txt
-          python3 manage.py migrate
-          python3 manage.py collectstatic --noinput
-          sudo systemctl restart gunicorn_api
+          export SECRET_KEY="${{ secrets.SECRET_KEY }}"
+          python manage.py test -v 2
+
+  deploy:
+      needs: test
+      if: success()
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v3
+
+        - name: Deploy to server via SSH
+          uses: appleboy/ssh-action@v0.1.7
+          with:
+            host: ${{ secrets.SERVER_HOST }}
+            username: deploy
+            key: ${{ secrets.SSH_PRIVATE_KEY }}
+            script: |
+              cd /home/deploy/apps/ApiJO_Back
+              git pull origin main
+              source .venv/bin/activate
+              pip install -r requirements.txt
+              python manage.py migrate
+              systemctl restart gunicorn_api
