--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
           uses: appleboy/ssh-action@v0.1.7
           with:
             host: ${{ secrets.SERVER_HOST }}
-            username: deploy
+            username: ${{ secrets.SERVER_USER }}
             key: ${{ secrets.SSH_PRIVATE_KEY }}
             script: |
               cd /home/deploy/apps/ApiJO_Back
