--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,4 +61,4 @@ jobs:
               source .venv/bin/activate
               pip install -r requirements.txt
               python manage.py migrate
-              systemctl restart gunicorn_api
+              sudo systemctl restart gunicorn_api
