--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,5 +60,6 @@ jobs:
               git pull origin main
               source .venv/bin/activate
               pip install -r requirements.txt
+              python manage.py makemigrations
               python manage.py migrate
               sudo systemctl restart gunicorn_api
