--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
       DATABASE_PORT: "5432"
       DEBUG: "True"
       ALLOWED_HOSTS: "127.0.0.1,localhost"
+      CORS_ALLOWED_ORIGINS: "http://localhost,http://127.0.0.1"
     steps:
       - uses: actions/checkout@v3
       - run: |
