--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,10 +57,12 @@ jobs:
             username: ${{ secrets.SERVER_USER }}
             key: ${{ secrets.SSH_PRIVATE_KEY }}
             script: |
+              set -e
               cd /home/deploy/apps/ApiJO_Back
-              git pull origin main
+              git fetch origin main
+              git reset --hard origin/main
               source .venv/bin/activate
               pip install -r requirements.txt
-              python manage.py makemigrations
-              python manage.py migrate
+              python manage.py makemigrations --noinput
+              python manage.py migrate --noinput
               sudo systemctl restart gunicorn_api
