--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,6 +63,6 @@ jobs:
               git reset --hard origin/main
               source .venv/bin/activate
               pip install -r requirements.txt
-              python manage.py makemigrations --noinput
+#              python manage.py makemigrations --noinput
               python manage.py migrate --noinput
               sudo systemctl restart gunicorn_api
