--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,8 @@ jobs:
       DEBUG: "True"
       ALLOWED_HOSTS: "127.0.0.1,localhost"
       CORS_ALLOWED_ORIGINS: "http://localhost,http://127.0.0.1"
+      ACCESS_TOKEN_LIFETIME: "00:00:30"
+      REFRESH_TOKEN_LIFETIME: "08:00:00"
     steps:
       - uses: actions/checkout@v3
       - run: |
